Fix virtual keyboard visibility.

--- a/themes/finna2/less/finna-other.less
+++ b/themes/finna2/less/finna-other.less
@@ -356,6 +356,12 @@ label.list-group-item {border-radius:0;font-weight:normal;margin-top:0;padding-l
 }
 
 // Virtual keyboard
+@media (min-width: 401px) {
+    .simple-keyboard.show-keyboard {
+        display: block;
+    }
+}
+
 .keyboard-selection {
     margin-top: 0;
 }
